--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
-DIR_NAME=xtest
-CONTAINER_NAME_APP=app-xtest
-CONTAINER_NAME_NGINX=nginx-xtest
-PORT=8010
-NETWORK_NAME=xtest
+# ---APP---
+APP_NAME=Laravel
+PORT=8011
+PHP_V=8.2
